deployment/gke-dev-env/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: web
  name: flutter-web-app
  labels:
    app: flutter-web-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flutter-web-app
  template:
    metadata:
      labels:
        app: flutter-web-app
    spec:
      containers:
        - name: flutter-web-app
          image: gcr.io/fitcentive-dev-02/flutter-web-app:1.0
          imagePullPolicy: Always
          resources:
            requests:
              memory: 300Mi
              cpu: "0.2"
            limits:
              memory: 500Mi
              cpu: "0.4"
          ports:
            - name: http-port
              containerPort: 80
