deployment/gke-dev-env/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: web
  name: flutter-web-app
spec:
  type: ClusterIP
  selector:
    app: flutter-web-app
  ports:
    - protocol: TCP
      name: http
      port: 80
